scss/widgets/topic-timeline.scss
// Otherwise the timeline won't fit into the screen
$container-post-width-xl: map-get(
  $map: $container-max-widths,
  $key: "lg"
);

.container.posts,
.suggested-topics {
  max-width: 100%;
  position: relative;

  @include media-breakpoint-up(xl) {
    width: $container-post-width-xl;
  }
}

.timeline-container:not(.timeline-fullscreen) {
  display: none;

  @include media-breakpoint-up(xl) {
    display: block;
    margin-left: $container-post-width-xl;
  }
}

// This is a button that is not needed after the layout update of topic-timeline/topic-progress
.show-topic-admin {
  display: none !important;
}

.timeline-container.timeline-fullscreen {
  background-color: $beige;
}

.timeline-container:not(.timeline-fullscreen) {
  &.timeline-docked {
    top: 0 !important;
  }

  .topic-timeline {
    display: flex;
  }

  .timeline-scrollarea-wrapper {
    margin-left: $grid-gutter-width / 2;
    white-space: nowrap;
  }

  .topic-timeline {
    margin-left: $grid-gutter-width;
  }

  .dc-topic-timeline-controls,
  .timeline-footer-controls {
    display: flex;
    flex-direction: column;
  }

  .topic-timeline .timeline-controls,
  .topic-timeline .timeline-footer-controls {
    margin: 0;

    > *,
    > button {
      display: block;
      margin: 0;
      padding: 0;
    }

    button.widget-button.toggle-admin-menu,
    button.widget-button.create,
    button.dropdown-select-box-header {
      box-shadow: 0 0.125rem 0.125rem rgba(0, 0, 0, 0.25);
      border-radius: 100%;
      display: flex;
      height: 3.125rem;
      margin: 0 0 0.625rem;
      padding: 0;
      width: 3.125rem;
      justify-content: center;
    }

    button.widget-button.toggle-admin-menu,
    button.dropdown-select-box-header {
      background: $white;
    }
  }

  .topic-timeline .timeline-footer-controls {
    > button.widget-button.create {
      @extend %action-button;
      border-radius: 100%;
      order: 2;
    }

    > * {
      order: 1;
    }
  }
}

#topic-progress-wrapper {
  display: flex;

  @include media-breakpoint-up(xl) {
    display: none;
  }

  &.docked {
    position: fixed;
    bottom: 0 !important;
  }
}

